# python-upskilling

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  cash_register.py  data.py  exceptions.py  main.py  poetry_scripts.py  pyproject.toml  test_cash_register.py  todo.md
.github/workflows/: ci.yml
src/: cash_register.py  data.py  exceptions.py
tests/: test_cash_register.py
