[project]
name = "cash-register"
version = "0.1.0"
description = ""
authors = [
    {name = "Cinex10",email = "y.driss@esi-sba.dz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
packages = [
    { include = "cmd" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "poetry_scripts:test"
cov = "poetry_scripts:coverage"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
coverage = "^7.9.1"
flake8 = "^7.3.0"
pylint = "^3.3.7"
pre-commit = "^4.2.0"
mypy = "^1.16.1"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
disallow_untyped_defs = true